# icelake

./: Cargo.toml  README.md
icelake/: Cargo.toml
icelake/examples/: recordbatch_writer.rs
icelake/src/: arrow.rs  arrow_schema.rs  iceberg.rs  lib.rs  manifest.rs  partition.rs  schema.rs  snapshot.rs  sort.rs  storage.rs  transaction.rs  value.rs  writer.rs  Â;w
icelake/src/manifest/: avro.rs  datafile.rs  manifest.rs  mod.rs  reader.rs  writer.rs
icelake/src/schema/: arrow.rs  mod.rs  schema.rs  update.rs
icelake/tests/: basic_operations.rs  manifests.rs
icelake/tests/data/lineitem/metadata/: 00000-d0f570ec-ab1e-4358-967a-cec223f0e58e.metadata.json  7733a113-2437-4a4a-b284-8639c7919024-m0.avro  snap-3988626671889928484-1-7733a113-2437-4a4a-b284-8639c7919024.avro
src/: builder.rs  iceberg.rs  lib.rs  manifest.rs  partition.rs  schema.rs  snapshot.rs  sort.rs  storage.rs  transaction.rs  utils.rs
