[package]
name = "iceberg"
version = "0.1.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8" }
bytes = { version = "1" }
uuid = { version = "1.3.0", features = ["v4"] }
regex = { version = "1" }
thiserror = { version = "1.0" }
object_store = { version = "0.5.5", features = ["aws"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" }
serde_json = { version = "1.0" }
apache-avro = { version = "0.14" }

[features]
s3 = [
    "object_store/aws",
    "object_store/aws_profile"
]
